--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
+    "broccoli-funnel": "^2.0.2",
     "ember-cli-babel": "^7.7.3",
+    "ember-cli-version-checker": "^3.1.3",
     "ember-modifier-manager-polyfill": "^1.0.3"
   },
   "devDependencies": {
